get solution path
